<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="org.frap129.spectrum.MainActivity">

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            tools:showIn="@layout/activity_main">

        <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">
            <androidx.cardview.widget.CardView
                    android:id="@+id/card0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="@dimen/card_elevation"
                    app:contentPadding="8dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prof0"
                        android:textAppearance="@android:style/TextAppearance.Material.Headline" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/battery"
                        android:contentDescription="@string/prof0"
                        android:tint="#fff"/>
                <TextView
                        android:id="@+id/desc0"
                        android:layout_marginTop="34dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profdesc0"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:gravity="bottom"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/card0"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="@dimen/card_elevation"
                    app:contentPadding="8dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prof1"
                        android:textAppearance="@android:style/TextAppearance.Material.Headline" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/thunder"
                        android:contentDescription="@string/prof1"
                        android:tint="#fff"/>
                <TextView
                        android:id="@+id/desc1"
                        android:layout_marginTop="34dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profdesc1"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:gravity="bottom"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/card1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="@dimen/card_elevation"
                    app:contentPadding="8dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prof2"
                        android:textAppearance="@android:style/TextAppearance.Material.Headline" />
                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end"
                        android:src="@drawable/atom"
                        android:contentDescription="@string/prof2"
                        android:tint="#fff"/>
                <TextView
                        android:id="@+id/desc2"
                        android:layout_marginTop="34dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profdesc2"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:gravity="bottom"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/card3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/card2"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="@dimen/card_elevation"
                    app:contentPadding="8dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prof3"
                        android:textAppearance="@android:style/TextAppearance.Material.Headline" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/rocket"
                        android:contentDescription="@string/prof3"
                        android:tint="#fff" tools:ignore="HardcodedText"/>
                <TextView
                        android:id="@+id/desc3"
                        android:layout_marginTop="34dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profdesc3"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:gravity="bottom"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                    android:id="@+id/card4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/card3"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="@dimen/card_elevation"
                    app:contentPadding="8dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prof4"
                        android:textAppearance="@android:style/TextAppearance.Material.Headline" />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/game"
                        android:contentDescription="@string/prof4"
                        android:tint="#fff"/>
                <TextView
                        android:id="@+id/desc4"
                        android:layout_marginTop="34dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profdesc4"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:gravity="bottom"/>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
